# dualmc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  README.md  cyl.stl  cylt.stl  pot.stl  surface.stl  thresh.stl
apps/: Makefile
apps/example/: Makefile  example.cpp  example.h  main.cpp
apps/gentables/: Makefile  gentables.cpp  gentables.h  main.cpp
data/: cube.raw  cube.txt  testCylinder.stl  testCylinder.tns
include/: dualmc.h  dualmc.tpp  dualmc_tables.tpp
src/: dualmc.tpp  dualmc_table.tpp  example.cpp  example.h  gentable.cpp
